fixing body font color for dark mode

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #839173;
+    color: white;
     text-align: center;
     display: flex;
     flex-direction: column;
